--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>rocks.zipcodewilmington</groupId>
     <artifactId>tic-tac-toe</artifactId>
     <version>1.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
